--- a/QRTracker/QRTracker.csproj
+++ b/QRTracker/QRTracker.csproj
@@ -36,6 +36,10 @@
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.4.3.1\lib\net40\EntityFramework.dll</HintPath>
     </Reference>
+    <Reference Include="ExcelLibrary">
+      <HintPath>..\..\..\..\..\Desktop\ExcelLibrary.dll</HintPath>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.DirectoryServices" />
@@ -78,6 +82,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="ImportGen\abstract\Interface1.cs" />
+    <Compile Include="ImportGen\FileGenerator.cs" />
+    <Compile Include="ImportGen\ImportWorker.cs" />
     <Compile Include="Models\Abstract\BaseQrDoc.cs" />
     <Compile Include="Models\Abstract\IBaseQrDoc.cs" />
     <Compile Include="Models\Abstract\IResult.cs" />
@@ -93,10 +100,10 @@
     <Compile Include="service\Abstract\BaseService.cs" />
     <Compile Include="service\Abstract\IBaseService.cs" />
     <Compile Include="service\DocumentService.cs" />
-    <Compile Include="service\QrTraker.Designer.cs">
+    <Compile Include="service\QrTracker.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>QrTraker.edmx</DependentUpon>
+      <DependentUpon>QrTracker.edmx</DependentUpon>
     </Compile>
     <Compile Include="service\ResultsService.cs" />
     <Compile Include="service\RightService.cs" />
@@ -226,7 +233,9 @@
     <Content Include="Scripts\modernizr-2.5.3.js" />
     <Content Include="Scripts\webcam.js" />
     <Content Include="shutter.mp3" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -273,16 +282,14 @@
     <Content Include="Views\Details\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <EntityDeploy Include="service\QrTraker.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>QrTraker.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Views\Today\GetTodayStatuses.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="images\Sorting icons.psd" />
+    <EntityDeploy Include="service\QrTracker.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>QrTracker.Designer.cs</LastGenOutput>
+    </EntityDeploy>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
