--- a/QRTracker/QRTracker.csproj
+++ b/QRTracker/QRTracker.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ScanController.cs" />
     <Compile Include="Controllers\TodayController.cs" />
+    <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="ExtentionMethods.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -95,6 +96,7 @@
     <Compile Include="Models\ResultAndQRDocModel.cs" />
     <Compile Include="Models\RoleModel.cs" />
     <Compile Include="Models\TrackModel.cs" />
+    <Compile Include="Models\UsersModel.cs" />
     <Compile Include="otherFunctions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="service\Abstract\BaseService.cs" />
@@ -290,6 +292,8 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>QrTracker.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <Content Include="Views\Users\Index.cshtml" />
+    <Content Include="Views\Users\GetRoles.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
