--- a/QRTracker/QRTracker.csproj
+++ b/QRTracker/QRTracker.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Models\Abstract\IResult.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\ActionModel.cs" />
+    <Compile Include="Models\AuthorisationAttribute.cs" />
     <Compile Include="Models\QrDoc.cs" />
     <Compile Include="Models\QrResultModel.cs" />
     <Compile Include="Models\ResultAndQRDocModel.cs" />
@@ -137,62 +138,63 @@
     <Content Include="Content\images\ui-icons_cd0a0a_256x240.png" />
     <Content Include="Content\jquery-ui-1.8.21.custom.css" />
     <Content Include="Content\jquery.dataTables.css" />
+    <Content Include="Content\logo.jpg" />
     <Content Include="Content\logo.png" />
     <Content Include="Content\responsive.css" />
-    <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
-    <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
-    <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
-    <Content Include="Content\themes\base\images\ui-bg_glass_65_ffffff_1x400.png" />
-    <Content Include="Content\themes\base\images\ui-bg_glass_75_dadada_1x400.png" />
-    <Content Include="Content\themes\base\images\ui-bg_glass_75_e6e6e6_1x400.png" />
-    <Content Include="Content\themes\base\images\ui-bg_glass_95_fef1ec_1x400.png" />
-    <Content Include="Content\themes\base\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
-    <Content Include="Content\themes\base\images\ui-icons_222222_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_2e83ff_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_454545_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_888888_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_cd0a0a_256x240.png" />
-    <Content Include="Content\themes\base\jquery-ui.css" />
-    <Content Include="Content\themes\base\jquery.ui.accordion.css" />
-    <Content Include="Content\themes\base\jquery.ui.all.css" />
-    <Content Include="Content\themes\base\jquery.ui.autocomplete.css" />
-    <Content Include="Content\themes\base\jquery.ui.base.css" />
-    <Content Include="Content\themes\base\jquery.ui.button.css" />
-    <Content Include="Content\themes\base\jquery.ui.core.css" />
-    <Content Include="Content\themes\base\jquery.ui.datepicker.css" />
-    <Content Include="Content\themes\base\jquery.ui.dialog.css" />
-    <Content Include="Content\themes\base\jquery.ui.progressbar.css" />
-    <Content Include="Content\themes\base\jquery.ui.resizable.css" />
-    <Content Include="Content\themes\base\jquery.ui.selectable.css" />
-    <Content Include="Content\themes\base\jquery.ui.slider.css" />
-    <Content Include="Content\themes\base\jquery.ui.tabs.css" />
-    <Content Include="Content\themes\base\jquery.ui.theme.css" />
-    <Content Include="Content\themes\base\minified\images\ui-bg_flat_0_aaaaaa_40x100.png" />
-    <Content Include="Content\themes\base\minified\images\ui-bg_flat_75_ffffff_40x100.png" />
-    <Content Include="Content\themes\base\minified\images\ui-bg_glass_55_fbf9ee_1x400.png" />
-    <Content Include="Content\themes\base\minified\images\ui-bg_glass_65_ffffff_1x400.png" />
-    <Content Include="Content\themes\base\minified\images\ui-bg_glass_75_dadada_1x400.png" />
-    <Content Include="Content\themes\base\minified\images\ui-bg_glass_75_e6e6e6_1x400.png" />
-    <Content Include="Content\themes\base\minified\images\ui-bg_glass_95_fef1ec_1x400.png" />
-    <Content Include="Content\themes\base\minified\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
-    <Content Include="Content\themes\base\minified\images\ui-icons_222222_256x240.png" />
-    <Content Include="Content\themes\base\minified\images\ui-icons_2e83ff_256x240.png" />
-    <Content Include="Content\themes\base\minified\images\ui-icons_454545_256x240.png" />
-    <Content Include="Content\themes\base\minified\images\ui-icons_888888_256x240.png" />
-    <Content Include="Content\themes\base\minified\images\ui-icons_cd0a0a_256x240.png" />
-    <Content Include="Content\themes\base\minified\jquery-ui.min.css" />
-    <Content Include="Content\themes\base\minified\jquery.ui.accordion.min.css" />
-    <Content Include="Content\themes\base\minified\jquery.ui.autocomplete.min.css" />
-    <Content Include="Content\themes\base\minified\jquery.ui.button.min.css" />
-    <Content Include="Content\themes\base\minified\jquery.ui.core.min.css" />
-    <Content Include="Content\themes\base\minified\jquery.ui.datepicker.min.css" />
-    <Content Include="Content\themes\base\minified\jquery.ui.dialog.min.css" />
-    <Content Include="Content\themes\base\minified\jquery.ui.progressbar.min.css" />
-    <Content Include="Content\themes\base\minified\jquery.ui.resizable.min.css" />
-    <Content Include="Content\themes\base\minified\jquery.ui.selectable.min.css" />
-    <Content Include="Content\themes\base\minified\jquery.ui.slider.min.css" />
-    <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
-    <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
+    <Content Include="Content\images\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Content\images\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
+    <Content Include="Content\images\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="Content\images\themes\base\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Content\images\themes\base\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="Content\images\themes\base\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="Content\images\themes\base\images\ui-bg_glass_95_fef1ec_1x400.png" />
+    <Content Include="Content\images\themes\base\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Content\images\themes\base\images\ui-icons_222222_256x240.png" />
+    <Content Include="Content\images\themes\base\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="Content\images\themes\base\images\ui-icons_454545_256x240.png" />
+    <Content Include="Content\images\themes\base\images\ui-icons_888888_256x240.png" />
+    <Content Include="Content\images\themes\base\images\ui-icons_cd0a0a_256x240.png" />
+    <Content Include="Content\images\themes\base\jquery-ui.css" />
+    <Content Include="Content\images\themes\base\jquery.ui.accordion.css" />
+    <Content Include="Content\images\themes\base\jquery.ui.all.css" />
+    <Content Include="Content\images\themes\base\jquery.ui.autocomplete.css" />
+    <Content Include="Content\images\themes\base\jquery.ui.base.css" />
+    <Content Include="Content\images\themes\base\jquery.ui.button.css" />
+    <Content Include="Content\images\themes\base\jquery.ui.core.css" />
+    <Content Include="Content\images\themes\base\jquery.ui.datepicker.css" />
+    <Content Include="Content\images\themes\base\jquery.ui.dialog.css" />
+    <Content Include="Content\images\themes\base\jquery.ui.progressbar.css" />
+    <Content Include="Content\images\themes\base\jquery.ui.resizable.css" />
+    <Content Include="Content\images\themes\base\jquery.ui.selectable.css" />
+    <Content Include="Content\images\themes\base\jquery.ui.slider.css" />
+    <Content Include="Content\images\themes\base\jquery.ui.tabs.css" />
+    <Content Include="Content\images\themes\base\jquery.ui.theme.css" />
+    <Content Include="Content\images\themes\base\minified\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Content\images\themes\base\minified\images\ui-bg_flat_75_ffffff_40x100.png" />
+    <Content Include="Content\images\themes\base\minified\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="Content\images\themes\base\minified\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Content\images\themes\base\minified\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="Content\images\themes\base\minified\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="Content\images\themes\base\minified\images\ui-bg_glass_95_fef1ec_1x400.png" />
+    <Content Include="Content\images\themes\base\minified\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Content\images\themes\base\minified\images\ui-icons_222222_256x240.png" />
+    <Content Include="Content\images\themes\base\minified\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="Content\images\themes\base\minified\images\ui-icons_454545_256x240.png" />
+    <Content Include="Content\images\themes\base\minified\images\ui-icons_888888_256x240.png" />
+    <Content Include="Content\images\themes\base\minified\images\ui-icons_cd0a0a_256x240.png" />
+    <Content Include="Content\images\themes\base\minified\jquery-ui.min.css" />
+    <Content Include="Content\images\themes\base\minified\jquery.ui.accordion.min.css" />
+    <Content Include="Content\images\themes\base\minified\jquery.ui.autocomplete.min.css" />
+    <Content Include="Content\images\themes\base\minified\jquery.ui.button.min.css" />
+    <Content Include="Content\images\themes\base\minified\jquery.ui.core.min.css" />
+    <Content Include="Content\images\themes\base\minified\jquery.ui.datepicker.min.css" />
+    <Content Include="Content\images\themes\base\minified\jquery.ui.dialog.min.css" />
+    <Content Include="Content\images\themes\base\minified\jquery.ui.progressbar.min.css" />
+    <Content Include="Content\images\themes\base\minified\jquery.ui.resizable.min.css" />
+    <Content Include="Content\images\themes\base\minified\jquery.ui.selectable.min.css" />
+    <Content Include="Content\images\themes\base\minified\jquery.ui.slider.min.css" />
+    <Content Include="Content\images\themes\base\minified\jquery.ui.tabs.min.css" />
+    <Content Include="Content\images\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="Content\working.gif" />
     <Content Include="Global.asax" />
     <Content Include="images\back_disabled.png" />
@@ -312,7 +314,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>41380</DevelopmentServerPort>
+          <DevelopmentServerPort>49795</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>http://localhost/Scan</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
